# reflex-os

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.reflex/: project.json
scripts/: check-app-bridge-catalog.mjs  check-dashboard-widget-fixtures.mjs  check-dashboard-widgets.mjs  check-no-legacy-css-imports.mjs  check-project-operating-center.mjs  check-tailwind-stack.mjs  check-ui-primitives.mjs  check-workspace-shell.mjs  check-workspace-tree.mjs
src/: App.css  App.tsx  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/builtin_apps/system-api-workbench/: index.html  manifest.json
src-tauri/builtin_apps/system-automation-center/: index.html  manifest.json
src-tauri/builtin_apps/system-bridge-console/: index.html  manifest.json
src-tauri/builtin_apps/system-clipboard-snippets/: index.html  manifest.json
src-tauri/builtin_apps/system-memory-capsule/: index.html  manifest.json
src-tauri/builtin_apps/system-project-cockpit/: index.html  manifest.json
src-tauri/builtin_apps/system-project-file-lens/: index.html  manifest.json
src-tauri/builtin_apps/system-quick-capture/: index.html  manifest.json
src-tauri/builtin_apps/system-research-capture/: index.html  manifest.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: app_bus.rs  app_runtime.rs  app_self_test.rs  app_server.rs  app_watcher.rs  apps.rs  apps_dispatch.rs  browser.rs  builtin_apps.rs  bus_log.rs  codex.rs  context.rs  lib.rs  logs.rs  main.rs  project.rs  project_watcher.rs  secrets.rs  storage.rs  suggester.rs  system_settings.rs
src-tauri/src/memory/: files.rs  injection.rs  map.rs  mod.rs  schema.rs  store.rs  tools.rs
src-tauri/src/memory/agents/: bus.rs  envelope.rs  indexer.rs  mod.rs  recall.rs
src-tauri/src/memory/rag/: chunk.rs  embed.rs  mod.rs  store.rs
src-tauri/src/scheduler/: commands.rs  engine.rs  manifest.rs  mod.rs  runner.rs  state.rs  templating.rs
(+47 files in other folders)
