[package]
name = "reflex-os"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reflex_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "fs", "time", "rt-multi-thread"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
notify = "6"
notify-debouncer-mini = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"], default-features = false }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
uuid = { version = "1", features = ["v4", "serde"] }
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies.keyring]
version = "3"
features = ["apple-native"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
